--- a/public_html/day20/sprite.html
+++ b/public_html/day20/sprite.html
@@ -4,13 +4,13 @@
   <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 <meta charset="utf-8">
-<title>#100днейкода.</title>
+<title>20 день #100днейкода - Отображение</title>
 </head>
 
 <body>
-	<h1>#100днейкода</h1>
-	<p><a href="day19/">19 день</a></p>
-	<p><a href="day20/">20 день</a></p>
+	
+	<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 </body>
 
 </html>
