--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,6 +11,7 @@
 	<h1>#100днейкода</h1>
 	<p><a href="day19/">19 день</a></p>
 	<p><a href="day20/">20 день</a></p>
+	<p><a href="day21/">21 день</a></p>
 </body>
 
 </html>
