День 22. Работает почти так, как надо.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,6 +12,7 @@
 	<p><a href="day19/">19 день</a></p>
 	<p><a href="day20/">20 день</a></p>
 	<p><a href="day21/">21 день</a></p>
+	<p><a href="day22/">22 день. Технически работает :(</a></p>
 </body>
 
 </html>
