--- a/public_html/day22/control_panel.html
+++ b/public_html/day22/control_panel.html
@@ -13,27 +13,25 @@
 		alternate content
 	</canvas>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
 	
     <script>
         socket = io(location.origin);
-		var field = document.getElementById("control-canvas"),
-		panel     = field.getContext('2d');
-		panel.beginPath();				//подготовили канвас
-		panel.moveTo(500,0);
-		panel.lineTo(0,500);      
-		panel.moveTo(0,0);
-		panel.lineTo(500,500);    
-		panel.stroke();           
+        var stage = new createjs.Stage("control-canvas")
 		var data = {};
-		var m_pressed = false;
-		//ctx.fillText("1", 355, 260);//буквы и цифры
-		field.onmousemove = function (event) {
-		    data.x = event.pageX;
-		    data.y = event.pageY;
-		    console.log(data);
-			socket.emit('sprites_21', data);
-                };
+        createjs.Touch.enable(stage);
+        // enabled mouse over / out events
+        stage.enableMouseOver(10);
+        stage.mouseMoveOutside = false; // keep tracking the mouse even when it leaves the canvas
+        stage.on("stagemousemove", function (evt) {
+            data.x = evt.stageX;
+            data.y = evt.stageY;
+            socket.emit('sprites_21', data);
+        });
+
+        stage.update();
+        createjs.Ticker.setFPS(60);
+        createjs.Ticker.addEventListener("tick", stage);
 	</script>
 </body>
 
