--- a/public_html/day22/control_panel.html
+++ b/public_html/day22/control_panel.html
@@ -4,7 +4,7 @@
   <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 <meta charset="utf-8">
-<title>22 день #100днейкода - Управление</title>
+<title>23 день #100днейкода - Управление</title>
 </head>
 
 <body>
@@ -22,13 +22,17 @@
         createjs.Touch.enable(stage);
         // enabled mouse over / out events
         stage.enableMouseOver(10);
-        stage.mouseMoveOutside = false; // keep tracking the mouse even when it leaves the canvas
+        stage.mouseMoveOutside = true; // keep tracking the mouse even when it leaves the canvas
+        var diameter = Math.random()*(50 - 10 +1)+10;
+        var color = '#'+(Math.random()*0xFFFFFF<<0).toString(16);
         stage.on("stagemousemove", function (evt) {
-            data.x = evt.stageX;
-            data.y = evt.stageY;
+            data.x = evt.stageX - 30;
+            data.y = evt.stageY - 30;
+            data.diameter = diameter;
+            data.color = color;
             socket.emit('sprites_21', data);
-        });
 
+        });
         stage.update();
         createjs.Ticker.setFPS(60);
         createjs.Ticker.addEventListener("tick", stage);
