--- a/public_html/day22/sprite.html
+++ b/public_html/day22/sprite.html
@@ -4,7 +4,7 @@
   <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 <meta charset="utf-8">
-<title>22 день #100днейкода - Отображение</title>
+<title>23 день #100днейкода - Отображение</title>
 </head>
 
 <body>
@@ -25,16 +25,15 @@
             console.log(data);
             stage.removeAllChildren();
             for (var key in data) {
-                var sprite = new createjs.Bitmap("https://img-android.lisisoft.com/imgmic/9/0/2809-i-com.a1786511733506cf6d55beeb9a.a04485462a.jpg");
-                sprite.scaleX = 0.5;		//масштаб
-                sprite.scaleY = 0.5;
-                sprite.x = data[key].x - 30;		//позиционируем
-                sprite.y = data[key].y - 30;
+                var sprite = new createjs.Shape();
+                sprite.x = data[key].x;		//позиционируем
+                sprite.y = data[key].y;
+                sprite.graphics.beginFill(data[key].color).drawCircle(1,1,data[key].diameter);
                 stage.addChild(sprite);
             }
-            setTimeout(function () {
+
                 stage.update();
-            }, 1)
+
         });
 
     </script>
